Charset value, not name should be used